<resources>
    <string name="app_name">Moon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="Login">Login</string>
    <string name="Verify">Verify</string>
    <string name="Register">Register</string>
    <string name="LogoImgString">Moon App</string>
    <string name="Email">E-Mail</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confrim Password</string>
    <string name="ForgetPassword">Forget Password??</string>
    <string name="GoogleRegister">Register with Google</string>
    <string name="GoogleLogin">Login With Google</string>
    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="namedots">Name:</string>
    <string name="Pricedots">Price:</string>
    <string name="back">Back</string>
    <string name="Sort">Sort</string>
    <string name="FullName">Full Name</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="HaveAnAccount">Have an Account?? Login</string>
    <string name="ResetPassword">Reset Password</string>
    <!--<string name="pleaseVerfiy">Please Verify Your E-Mail Address,An E-Mail was sent </string>-->
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="dashboard">Dashnoard</string>
    <string name="Home">Home</string>
    <string name="navigationBottomHome">Home</string>
    <string name="navigationBottomCategories">Categories</string>
    <string name="navigationBottomProfile">Profile</string>
    <string name="phoneNumber">Number</string>
    <string name="EmailVerification">Email Verification</string>
    <string name="HouseName">House Name:</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="add">Add</string>
    <string name="test">Test</string>
    <string name="phoneNumberEntry">Please Enter Your Number</string>
    <string name="logout">Log out</string>
    <string name="Exit">Exit</string>
</resources>
