<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                tools:context=".Activities.LoginActivity">
    <LinearLayout
            android:weightSum="6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">
        <ImageView
                android:id="@+id/LoginLogo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:contentDescription="@string/LogoImgString"
                android:layout_gravity="center"
                android:src="@drawable/logoiwant"/>

        <EditText
                android:id="@+id/txtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:hint="@string/Email"
                android:text=""
                android:maxLines="1"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:background="@color/white"
                android:nextFocusUp="@id/txtPasswordLogin"
                android:drawableStart="@drawable/ic_mail_black_24dp"
                android:drawablePadding="15dp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4b000000"/>
        <EditText
                android:id="@+id/txtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:layout_height="0dp"
                android:hint="@string/Password"
                android:text=""
                android:maxLines="1"
                android:lines="1"
                android:inputType="textPassword"
                android:background="@color/white"
                android:nextFocusUp="@id/btnRegisterRegister"
                android:nextFocusDown="@id/btnRegisterRegister"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="15dp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4b000000"/>
        <Button
                android:id="@+id/btnResetPasswordLogin"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="@string/ResetPassword"
                android:gravity="right"
                android:background="@color/white_transparent"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:layout_margin="5dp"/>
        <Button
                android:focusable="true"
                android:id="@+id/btnLoginLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/Login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="30dp"
                android:paddingEnd="5dp"
                android:background="@drawable/roundcorner_button"/>

        <Button
                android:id="@+id/btnSignInGoogle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/GoogleLogin"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:background="@drawable/round_button_google"
                android:drawableStart="@drawable/googleg_standard_color_18"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:textAllCaps="false"
                android:paddingEnd="16dp"/>

        <Button
                android:focusable="true"
                android:id="@+id/btnRegisterLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/Register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="30dp"
                android:paddingEnd="10dp"
                android:background="@drawable/roundcorner_button"/>

        <Button
                android:focusable="true"
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/Exit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_gravity="left"
                android:textSize="18sp"
                android:drawableEnd="@drawable/ic_exit_to_app_black_24dp"
                android:background="@drawable/roundcorner_button"/>
    </LinearLayout>
</RelativeLayout>