<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.ProfileActivity">

    <LinearLayout
            android:id="@+id/mainLinPro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5"
            android:orientation="vertical"
            android:layout_centerInParent="true">

        <ImageView
                android:id="@+id/imgProflie"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/LogoImgString"
                android:src="@drawable/profile"/>

        <TextView
                android:id="@+id/LogoTxtLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:gravity="center"
                android:text=""
                android:textSize="25sp"
                android:textColor="#000"
                android:textStyle="normal"/>
        <TextView
                android:id="@+id/txtNameProfile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:textSize="17sp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:drawableStart="@drawable/profile"
                android:drawablePadding="10dp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/viewLine"
                android:background="@color/view"
                android:layout_weight="0.00625"/>

        <TextView
                android:id="@+id/txtEmailProfile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text=""
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:drawableStart="@drawable/ic_mail_fullblack"
                android:drawablePadding="10dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/view"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/NavigationBottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">
        <Button
                android:id="@+id/btnHomeProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/navigationBottomHome"
                android:background="@drawable/navigation_buttons"/>
        <Button
                android:id="@+id/btnCategoriesProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/navigationBottomCategories"
                android:background="@drawable/navigation_buttons"/>
        <Button
                android:id="@+id/btnProfileProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/navigationBottomProfile"
                android:background="@drawable/navigation_buttons"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:layout_centerInParent="true"
            android:layout_above="@+id/NavigationBottomLayout">
        <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/white"
                android:drawableEnd="@drawable/ic_add_circle_black_24dp"
                android:drawablePadding="10dp"
                android:background="@drawable/button_add_round"/>

    </LinearLayout>
    <Button
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogOut"
            android:text="@string/logout"
            android:textSize="17sp"
            android:background="@drawable/roundcorner_button"
            android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
            android:drawablePadding="10dp"
            android:paddingEnd="10dp"
            android:layout_above="@+id/NavigationBottomLayout"
            android:layout_centerInParent="true"
            android:paddingStart="10dp"/>
</RelativeLayout>