<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".Activities.RegisterActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5"
            android:orientation="vertical"
            android:layout_centerInParent="true">
        <ImageView
                android:id="@+id/RegisterLogo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/logoiwant"/>
        <TextView
                android:id="@+id/LogoTxtRegister"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/Register"
                android:textSize="37sp"
                android:textColor="@color/black"
                android:textStyle="normal"/>
        <EditText
            android:id="@+id/txtFristNameRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:hint="@string/fname"
            android:text=""
            android:maxLines="1"
            android:inputType="textCapWords"
            android:background="@color/white"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="15dp"
            android:focusedByDefault="true"
            android:nextFocusUp="@id/txtEmail"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4b000000"/>
        <EditText
                android:id="@+id/txtLastNameRegister"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:hint="@string/lname"
                android:inputType="textCapWords"
                android:text=""
                android:maxLines="1"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="15dp"
                android:focusedByDefault="true"
                android:nextFocusUp="@id/txtEmail"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4b000000"/>
        <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:hint="@string/Email"
                android:text=""
                android:maxLines="1"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:background="@color/white"
                android:nextFocusUp="@id/txtPasswordRegister"
                android:drawableStart="@drawable/ic_mail_black_24dp"
                android:drawablePadding="15dp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4b000000"/>
        <EditText
                android:id="@+id/txtPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:hint="@string/Password"
                android:text=""
                android:maxLines="1"
                android:lines="1"
                android:inputType="textPassword"
                android:background="@color/white"
                android:nextFocusUp="@id/txtConfirmPasswordRegister"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="15dp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4b000000"/>
        <EditText
                android:id="@+id/txtConfirmPasswordRegister"
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:layout_height="0dp"
                android:hint="@string/ConfirmPassword"
                android:text=""
                android:maxLines="1"
                android:lines="1"
                android:inputType="textPassword"
                android:background="@color/white"
                android:nextFocusUp="@id/btnRegisterRegister"
                android:nextFocusDown="@id/btnRegisterRegister"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="15dp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4b000000"/>
        <Button
            android:id="@+id/btnRegisterRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:text="@string/Register"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:textAllCaps="true"
            android:elevation="15dp"
            android:background="@drawable/roundcorner_button"
            android:layout_marginBottom="10dp"
            android:layout_margin="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="10dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:drawablePadding="-15sp"/>
        <Button
                android:id="@+id/btnLoginRegister"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:text="@string/HaveAnAccount"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:elevation="15dp"
                android:layout_marginBottom="10dp"
                android:layout_margin="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="10dp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:background="@drawable/roundcorner_button"
                android:drawablePadding="-15sp"/>
    </LinearLayout>
</RelativeLayout>