<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".Activities.ResetPasswordActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:weightSum="3"
            android:orientation="vertical">


        <EditText
                android:id="@+id/txtEmailReset"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:drawablePadding="10dp"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_mail_black_24dp"
                android:hint="@string/Email"
                android:text=""
                android:background="#FFFFFF"
                android:maxLines="1"
                android:lines="1"
                android:inputType="textEmailAddress"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#4b000000"/>


        <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="match_parent"
                android:drawableEnd="@drawable/ic_arrow_right_white"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:padding="10dp"
                android:layout_margin="12dp"
                android:textSize="15sp"
                android:background="@drawable/roundcorner_button"
                android:text="@string/ResetPassword"
                android:textColor="@color/white"/>
    </LinearLayout>
    <Button
            android:id="@+id/btnLoginReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:layout_alignParentBottom="true"
            android:drawableStart="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:textColor="@color/white"
            android:background="@drawable/roundcorner_button"/>
</RelativeLayout>
