<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/dashboardmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.DashboardActivity"
        android:focusable="true">
    <LinearLayout
            android:id="@+id/mainLin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="7"
            android:orientation="vertical">
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/viewLine"
                android:background="#4b000000"
                android:focusable="true"
                android:layout_weight="0.00625"/>

        <SearchView
                android:id="@+id/txtSearch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/boarder"
                android:layout_weight="0.5"/>

        <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:layout_marginBottom="8dp"/>
        <LinearLayout
                android:id="@+id/ll_dots"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"/>
        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/gridview"
                  android:layout_width="wrap_content"
                  android:layout_height="0dp"
                  android:layout_weight="2.9"
                  android:columnWidth="100dp"
                  android:numColumns="auto_fit"
                  android:verticalSpacing="10dp"
                  android:horizontalSpacing="10dp"
                  android:stretchMode="columnWidth"
                  android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/NavigationBottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">
        <Button
                android:id="@+id/btnHomeHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/navigationBottomHome"
                android:background="@drawable/navigation_buttons"/>
        <Button
                android:id="@+id/btnCategoriesHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/navigationBottomCategories"
                android:background="@drawable/navigation_buttons"/>
        <Button
                android:id="@+id/btnProfileHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/navigationBottomProfile"
                android:background="@drawable/navigation_buttons"/>
    </LinearLayout>
</RelativeLayout>